--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "db:migrate": "npx drizzle-kit migrate"
   },
   "dependencies": {
+    "@conform-to/react": "^1.2.2",
+    "@conform-to/zod": "^1.2.2",
     "@hookform/resolvers": "^3.9.1",
     "@libsql/client": "^0.14.0",
     "@radix-ui/react-accordion": "^1.2.2",
@@ -74,7 +76,6 @@
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
     "@react-router/dev": "^7.1.1",
-    "@types/node": "^20.17.11",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.1",
     "autoprefixer": "^10.4.20",
