--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@radix-ui/react-tooltip": "^1.1.6",
     "@react-router/node": "^7.1.1",
     "@react-router/serve": "^7.1.1",
+    "better-auth": "^1.1.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
